--- a/solutions/.vscode/settings.json
+++ b/solutions/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
     "files.associations": {
-        "type_traits": "cpp"
+        "type_traits": "cpp",
+        "iostream": "cpp",
+        "bitset": "cpp",
+        "chrono": "cpp"
     }
 }
