--- a/solutions/.vscode/settings.json
+++ b/solutions/.vscode/settings.json
@@ -3,6 +3,7 @@
         "type_traits": "cpp",
         "iostream": "cpp",
         "bitset": "cpp",
-        "chrono": "cpp"
+        "chrono": "cpp",
+        "valarray": "cpp"
     }
 }
