--- a/solutions/.vscode/settings.json
+++ b/solutions/.vscode/settings.json
@@ -7,6 +7,9 @@
         "valarray": "cpp",
         "cmath": "cpp",
         "complex": "cpp",
-        "cstdlib": "cpp"
+        "cstdlib": "cpp",
+        "list": "cpp",
+        "deque": "cpp",
+        "vector": "cpp"
     }
 }
