The trip and Dragon of Loowater

--- a/solutions/.vscode/settings.json
+++ b/solutions/.vscode/settings.json
@@ -10,6 +10,7 @@
         "cstdlib": "cpp",
         "list": "cpp",
         "deque": "cpp",
-        "vector": "cpp"
+        "vector": "cpp",
+        "limits": "cpp"
     }
 }
