--- a/solutions/data.in
+++ b/solutions/data.in
@@ -1,2 +1,23 @@
-7  4  3
-7  4  2
+3 3 2
+***
+*N*
+***
+DE
+4 4 5
+...#
+*#O.
+*.*.
+*.#.
+FFEFF
+10 10 20
+....*.....
+.......*..
+.....*....
+..*.#.....
+...#N.*..*
+...*......
+..........
+..........
+..........
+..........
+FDFFFFFFEEFFFFFFEFDF
