--- a/solutions/.vscode/settings.json
+++ b/solutions/.vscode/settings.json
@@ -14,6 +14,7 @@
         "limits": "cpp",
         "unordered_map": "cpp",
         "array": "cpp",
-        "*.tcc": "cpp"
+        "*.tcc": "cpp",
+        "iosfwd": "cpp"
     }
 }
