--- a/solutions/.vscode/settings.json
+++ b/solutions/.vscode/settings.json
@@ -15,6 +15,9 @@
         "unordered_map": "cpp",
         "array": "cpp",
         "*.tcc": "cpp",
-        "iosfwd": "cpp"
+        "iosfwd": "cpp",
+        "forward_list": "cpp",
+        "unordered_set": "cpp",
+        "system_error": "cpp"
     }
 }
