--- a/solutions/.vscode/settings.json
+++ b/solutions/.vscode/settings.json
@@ -19,6 +19,7 @@
         "forward_list": "cpp",
         "unordered_set": "cpp",
         "system_error": "cpp",
-        "functional": "cpp"
+        "functional": "cpp",
+        "string_view": "cpp"
     }
 }
