--- a/solutions/data.in
+++ b/solutions/data.in
@@ -1,13 +1,301 @@
-8/8/8/3Q4/3N4/8/8/8
-8/8/8/8/7B/6N1/8/7R
-8/8/8/8/1p1p1p2/8/P1P1P1P1/8
-5k1r/2q3p1/p3p2p/1B3p1Q/n4P2/6P1/bbP2N1P/1K1RR3
-8/8/8/8/8/8/8/7r
-rrrrrrrr/8/8/8/8/8/8/8
-1n1n1n1n/n1n1n1n1/1n1n1n1n/n1n1n1n1/1n1n1n1n/n1n1n1n1/1n1n1n1n/n1n1n1n1
-n7/8/8/8/8/8/8/7N
-Q7/8/8/8/8/8/8/8
-Qp6/PP6/8/8/8/8/8/8
-Kp6/PP6/8/8/8/8/8/8
-Bp6/PP6/8/8/8/8/8/8
-Np6/PP6/8/8/8/8/8/8
+1
+rcivyfh
+snlbpz
+2
+uxdq
+iraca
+3
+t
+fpnwuvrsc
+4
+euqp
+gqqcpvu
+5
+foc
+ojckou
+6
+notggxj
+sacqi
+7
+ikkegmj
+qtkzvvqps
+8
+dnnml
+wfzavhvfrfjxrvujqejl
+9
+bduiij
+uuutbt
+10
+wa
+ctvntoknyarjotkrpub
+11
+rwtmr
+fmtibxbwmun
+12
+jlx
+unwggl
+13
+ijrgef
+bljwvmtwlftyeejehf
+14
+fl
+sngegokmllz
+15
+juleswm
+uqsf
+16
+zkofxm
+mudsioevzd
+17
+lzep
+abfwuxdozpc
+18
+oq
+amhvuvzr
+19
+flhgrzy
+agsudwlcnpi
+20
+goes
+zpsziqgvymnz
+21
+hzt
+wyxhblyl
+22
+ez
+zwtqquyhcwhqjgds
+23
+w
+dx
+24
+my
+llvrlqqjliafjhjfqaq
+25
+fkdcdjb
+vzegmzyxsqj
+26
+bjlks
+riwhgcrjgwuhxqg
+27
+y
+dys
+28
+rbys
+jcegvoccuevfkta
+29
+q
+zsquvrosirqcdcgji
+30
+xkft
+ayzv
+31
+tmssg
+mdeavotn
+32
+w
+yhxzgkgzzgaa
+33
+atpvo
+icamfvayjsxaseatnk
+34
+mlho
+krjamxxuzyietk
+35
+eecfw
+hpvrokc
+36
+ypfpyh
+xfxzdhfyrkfvomtxtiuk
+37
+eovdf
+sgkwdpvcuf
+38
+twu
+ujmpgfyap
+39
+fdukkxe
+hcuzaytfi
+40
+ddoz
+apufpwunbzh
+41
+kgucow
+nwxgdfx
+42
+ilgumv
+tklqaopjebq
+43
+gewc
+tbbyhyfpkomyjc
+44
+wphwgz
+kc
+45
+ki
+gnwb
+46
+aavy
+nkvz
+47
+hdcdt
+bzmklrivzldokhfkhc
+48
+opv
+qft
+49
+jypxbqj
+dctyehdsrkxbtclktiwk
+50
+rgzp
+ysnk
+51
+qmzqqi
+lzikcbmplg
+52
+jsoaap
+xohmanemowdw
+53
+oxby
+dnqqtqanga
+54
+y
+mob
+55
+oqga
+cfavtzzuacjrscjurqv
+56
+qpseqss
+yslcyoztny
+57
+ocyhxc
+rtioz
+58
+drcu
+udjp
+59
+l
+eliulyiowrlbjeuutusw
+60
+x
+x
+61
+vii
+wxs
+62
+gmugwi
+nvfzactvwlrlk
+63
+kghtqv
+ooywasezdimaolcqex
+64
+spzebkk
+fdgutws
+65
+wmvx
+dkstxulesbyj
+66
+emnpys
+g
+67
+nci
+b
+68
+zymekgy
+cloun
+69
+f
+stfjuzdanqdvugr
+70
+efa
+nabqnrmafs
+71
+x
+xjhymkldpizvcxbj
+72
+s
+zv
+73
+omzrr
+jrjjaqhocvtrdtohsqrr
+74
+qs
+dgucxmyjfhshzzvcwpv
+75
+kkj
+acvmsns
+76
+vnatb
+cih
+77
+pg
+mk
+78
+dgwp
+ftsioecdzaz
+79
+aspc
+zjsqrpc
+80
+ji
+fxcnr
+81
+xhyzlzz
+nbeedcdoutilymxgycf
+82
+r
+uoguqrupdjthoylrpfn
+83
+sljpth
+yjlxd
+84
+dzsu
+jz
+85
+cgtdr
+syzpskakfjegsrdvt
+86
+w
+esxdxzlsceew
+87
+elw
+lgwumcoehjxpi
+88
+va
+yzjjronvkrb
+89
+nsjwqgi
+umbgmsoznqj
+90
+pswg
+jdtcfrrxcnnkwhfki
+91
+y
+dxntgaibwojhrej
+92
+vavaq
+kor
+93
+yzgxb
+wqcdqmemapvu
+94
+e
+rhorxyelqxlrektnhls
+95
+cesq
+hmdbsvtzlmwmqjcovv
+96
+hqjocba
+iuwpckuddpycdlbpd
+97
+tthonpf
+fjaipiclzgwtmb
+98
+kdqxgh
+taucqktxhzghjv
+99
+njt
+fnggaslqq
+100
+x
+nznprzlp
+-1
