--- a/solutions/data.in
+++ b/solutions/data.in
@@ -1,5 +1,7 @@
-Madam, Im adam!
-Roma tibi subito motibus ibit amor.
-Me so hungry!
-Si nummi immunis
-DONE
+6
+sator arepo tenet opera rotas
+this sentence is, quite clearly, not a magic square palindrome! but then again, you never know...
+muse sun, eve.s e(y)es even use sum.
+abcd befc cfeb dcba
+abba
+a
