--- a/solutions/data.in
+++ b/solutions/data.in
@@ -1,2 +1,33 @@
-1
-AaBb
+6
+
+carthorse.!@#$%^&*
+horse
+horse cart*&^%$#@!.
+orchestra
+i do not know u
+ok i now donut
+
+zaaaahari is here
+si hari ere h aaaaz
+i like tunes
+tunes i like
+
+carthorse
+horse
+horse cart
+i do not know u
+ok i now donut
+orchestra
+
+carthorse
+horse
+horse cart
+i do not know u
+ok i now donut
+orchestra
+
+abc
+def
+
+cba
+abc
