--- a/solutions/data.in
+++ b/solutions/data.in
@@ -1,21 +1,30 @@
+1
+YYYYNYY
+2
+NNNNNNN
+NNNNNNN
+2
+YYYYYYY
+YYYYYYY
+3
+YNYYYYY
+YNYYNYY
+NYYNNYY
+3
+YNYYYYN
+YNYYNYN
+NYYNNYN
+3
+YNYYYYN
+YNYYNYN
+NYYNYYN
 4
-20 4
-380 left
-720 left
-1340 right
-1040 left
-15 4
-380 left
-720 left
-1340 right
-1040 left
-15 4
-380 left
-720 left
-1340 left
-1040 left
-15 4
-380 right
-720 right
-1340 right
-1040 right
+YYYYYYY
+NYYNNNN
+NNYYYYN
+NNNYNNN
+3
+NNNNNNN
+YNNNNNN
+NNNNYNN
+0
