--- a/solutions/data.in
+++ b/solutions/data.in
@@ -1,30 +1,40 @@
+3
 1
-YYYYNYY
-2
-NNNNNNN
-NNNNNNN
-2
-YYYYYYY
-YYYYYYY
-3
-YNYYYYY
-YNYYNYY
-NYYNNYY
-3
-YNYYYYN
-YNYYNYN
-NYYNNYN
-3
-YNYYYYN
-YNYYNYN
-NYYNYYN
-4
-YYYYYYY
-NYYNNNN
-NNYYYYN
-NNNYNNN
-3
-NNNNNNN
-YNNNNNN
-NNNNYNN
-0
+AYGSU
+DOMRA
+CPFAS
+XBODG
+WDYPK
+PRXWO
+CBOPT
+DOSBG
+GTRAR
+APMMS
+WSXNU
+EFGHI
+5
+AYGSU
+DOMRA
+CPFAS
+XBODG
+WDYPK
+PRXWO
+CBOPT
+DOSBG
+GTRAR
+APMMS
+WSXNU
+EFGHI
+64
+FGHIJ
+EFGHI
+DEFGH
+CDEFG
+BCDEF
+ABCDE
+WBXDY
+UWYXZ
+XXZFG
+YYFYH
+EZWZI
+ZGHIJ
