--- a/solutions/data.in
+++ b/solutions/data.in
@@ -1,6 +1,22 @@
-11 13 9
-27 59 17
-19 37 1
-67 91 19
-1 1 1
-465 706 146
+3
+root
+2super
+rootrootrootroot
+1
+0#
+4
+admin
+bdmin
+11
+22
+2
+#0
+0#0
+5
+1E
+2D
+5A
+3B
+4C
+1
+0#00
