--- a/solutions/data.in
+++ b/solutions/data.in
@@ -1,12 +1,23 @@
-2
-5  4
-1  2
-1  3
-3  4
-5  3
-
-4  4
-1  2
-1  3
-4  2
-4  3
+XZY
+XGY
+XWY
+ZXY
+ZGW
+ZGYZ
+YWWX
+#
+CA
+CAE
+CAF
+AFFE
+AFFB
+AFFBC
+EF
+EB
+#
+XWY
+ZX
+ZXY
+ZXW
+YWWZ
+#
