657 The die is cast

--- a/solutions/data.in
+++ b/solutions/data.in
@@ -1,36 +1,8 @@
-14 34
-John Aaron
-Aaron Benedict
-Betsy John
-Betsy Ringo
-Ringo Dolly
-Benedict Paul
-John Betsy
-John Aaron
-Benedict George
-Dolly Ringo
-Paul Martha
-George Ben
-Alexander George
-Betsy Ringo
-Alexander Stephen
-Martha Stephen
-Benedict Alexander
-Stephen Paul
-Betsy Ringo
-Quincy Martha
-Ben Patrick
-Betsy Ringo
-Patrick Stephen
-Paul Alexander
-Patrick Ben
-Stephen Quincy
-Ringo Betsy
-Betsy Benedict
-Betsy Benedict
-Betsy Benedict
-Betsy Benedict
-Betsy Benedict
-Betsy Benedict
-Quincy Martha
+10 6
+..........
+.XXX......
+....XXX...
+.......XXX
+...XXXX...
+*X*X*.....
 0 0
